--- a/_sass/components/_box.scss
+++ b/_sass/components/_box.scss
@@ -23,3 +23,23 @@
 			padding: 0;
 		}
 	}
+
+/* Box Company */
+
+.box-company {
+	border-left: solid 5px _palette(border);
+	margin-bottom: _size(element-margin);
+	padding: 1.5em 1.5em 0.1em 1.5em;
+
+	> :last-child,
+	> :last-child > :last-child,
+	> :last-child > :last-child > :last-child {
+		margin-bottom: 0;
+	}
+
+	&.alt {
+		border: 0;
+		border-radius: 0;
+		padding: 0;
+	}
+}
