--- a/_sass/components/_box.scss
+++ b/_sass/components/_box.scss
@@ -28,8 +28,9 @@
 
 .box-company {
 	border-left: solid 5px _palette(border);
+	margin-top: (_size(element-margin) * 0.5);
 	margin-bottom: _size(element-margin);
-	padding: 1.5em 1.5em 0.1em 1.5em;
+	padding: 1.5em;
 
 	> :last-child,
 	> :last-child > :last-child,
