--- a/_sass/components/_accordion.scss
+++ b/_sass/components/_accordion.scss
@@ -97,6 +97,7 @@
 	margin: 2px 0 0 0;
 	padding: .5em .5em .5em .7em;
 	font-size: 100%;
+    font-weight: bold;
 }
 .ui-accordion .ui-accordion-content {
 	padding: 1em 2.2em;
@@ -883,7 +884,6 @@ body .ui-tooltip {
 /* Component containers
 ----------------------------------*/
 .ui-widget {
-	font-family: Arial,Helvetica,sans-serif;
 	font-size: 1em;
 }
 .ui-widget .ui-widget {
@@ -893,7 +893,6 @@ body .ui-tooltip {
 .ui-widget select,
 .ui-widget textarea,
 .ui-widget button {
-	font-family: Arial,Helvetica,sans-serif;
 	font-size: 1em;
 }
 .ui-widget.ui-widget-content {
@@ -1064,31 +1063,31 @@ a.ui-button:active,
 }
 .ui-icon,
 .ui-widget-content .ui-icon {
-	background-image: url("assets/images/ui-icons_444444_256x240.png");
+	background-image: url("/assets/images/ui-icons_444444_256x240.png");
 }
 .ui-widget-header .ui-icon {
-	background-image: url("assets/images/ui-icons_444444_256x240.png");
+	background-image: url("/assets/images/ui-icons_444444_256x240.png");
 }
 .ui-state-hover .ui-icon,
 .ui-state-focus .ui-icon,
 .ui-button:hover .ui-icon,
 .ui-button:focus .ui-icon {
-	background-image: url("assets/images/ui-icons_555555_256x240.png");
+	background-image: url("/assets/images/ui-icons_555555_256x240.png");
 }
 .ui-state-active .ui-icon,
 .ui-button:active .ui-icon {
-	background-image: url("assets/images/ui-icons_ffffff_256x240.png");
+	background-image: url("/assets/images/ui-icons_ffffff_256x240.png");
 }
 .ui-state-highlight .ui-icon,
 .ui-button .ui-state-highlight.ui-icon {
-	background-image: url("assets/images/ui-icons_777620_256x240.png");
+	background-image: url("/assets/images/ui-icons_777620_256x240.png");
 }
 .ui-state-error .ui-icon,
 .ui-state-error-text .ui-icon {
-	background-image: url("assets/images/ui-icons_cc0000_256x240.png");
+	background-image: url("/assets/images/ui-icons_cc0000_256x240.png");
 }
 .ui-button .ui-icon {
-	background-image: url("assets/images/ui-icons_777777_256x240.png");
+	background-image: url("/assets/images/ui-icons_777777_256x240.png");
 }
 
 /* positioning */
