--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -69,6 +69,7 @@
 	@import 'components/contact-method';
 	@import 'components/spotlights';
 	@import 'components/accordion';
+	@import 'components/skillset';
 
 // Layout.
 
