--- a/_sass/components/_box.scss
+++ b/_sass/components/_box.scss
@@ -27,7 +27,7 @@
 /* Box Company */
 
 .box-company {
-	border-left: solid 5px _palette(border);
+	border-left: solid 5px _palette(accent3);
 	margin-top: (_size(element-margin) * 0.5);
 	margin-bottom: _size(element-margin);
 	padding: 1.5em;
