chore: include personal skills draft

--- a/_sass/components/_skillset.scss
+++ b/_sass/components/_skillset.scss
@@ -12,7 +12,7 @@
     }
     .skillset-level-bar {
         height: 12px;
-        background: _palette(bg);
+        background: _palette(bg-alt);
     }
     .skillset-level-bar-inner {
         height: 12px;
