--- a/_sass/components/_button.scss
+++ b/_sass/components/_button.scss
@@ -131,10 +131,10 @@
 		}
 
 		&.accent2 {
-			background-color: _palette(bg);
-			box-shadow: none;
+			box-shadow: inset 0 0 0 2px _palette(accent2);
 			color: _palette(fg);
-			padding: 1.75em;
+			padding: 0 1.75em;
+			margin: 0.35em;
 
 			&:hover, &:active {
 				background-color: _palette(bg);
