chore: center personal skill boxes

--- a/_sass/components/_list.scss
+++ b/_sass/components/_list.scss
@@ -76,6 +76,10 @@
 				}
 			}
 
+			&.centered {
+				text-align: center;
+			}
+
 			&.small {
 				li {
 					padding: 0 (_size(element-margin) * 0.5) 0 0;
