--- a/_sass/components/_button.scss
+++ b/_sass/components/_button.scss
@@ -133,7 +133,7 @@
 		&.accent2 {
 			box-shadow: inset 0 0 0 2px _palette(accent2);
 			color: _palette(fg);
-			padding: 0 1.75em;
+			padding: 0 1.75em !important;
 			margin: 0.35em;
 
 			&:hover, &:active {
