--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <!-- Footer -->
 	<footer id="footer">
 		<div class="inner">
-			<ul class="icons">
+			<ul class="icons centered">
 				{% for key_value in site.socials %}
 					{% if key_value[1] %}
 						<li>
@@ -17,7 +17,7 @@
 					</a>
 				</li>				
 			</ul>
-			<ul class="copyright">
+			<ul class="copyright centered">
 				<li>&copy; {{ site.title }} {{ site.subtitle }}</li>
 				<li>Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></li>
 				<li>Jekyll integration: <a href="http://andrewbanchi.ch" target="_blank">Andrew Banchich</a></li>
