--- a/_sass/components/_list.scss
+++ b/_sass/components/_list.scss
@@ -54,6 +54,10 @@
 				}
 			}
 
+			&.centered {
+				text-align: center;
+			}
+
 			@include breakpoint(small) {
 				li {
 					padding: 0 0.75em 0 0;
